# ds-aa-ken-drought

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
analysis/: 01.0_review_kmd_hindcasts.ipynb  01.1_review_climate_drivers.ipynb  01.3_testing_forecast_behaviour_leadtime.ipynb  01.4_review_kmd_hindcasts_with_iod.ipynb
exploration/: install_packages.R  spi_compute.R
src/: __init__.py  utils.py
src/datasources/: __init__.py  era5.py
src/utils/: __init__.py  constants.py  db_utils.py  helpers.py  parser.py
